nginx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  #name: movies
spec:
  replicas: 2
  selector:
    matchLabels:
      app: swiggy
      #app: movies
  template:
    metadata:
      labels:
        app: swiggy
        #app: movies
    spec:
      containers:
      - name: cont-1
        image: nginx
        #image: mdinesh28/movies:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  #name: movies
spec:
  type: NodePort
  ports:
  - port: 80
  selector:
    app: swiggy
    #app: movies
