two.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: two
  #name: train
spec:
  replicas: 2
  selector:
    matchLabels:
      app: zomato
      #app: train
  template:
    metadata:
      labels:
        app: zomato
        #app: train
    spec:
      containers:
      - name: cont-2
        image: httpd
        #image: mdinesh28/train:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: httpd
  #name: train
spec:
  type: NodePort
  ports:
  - port: 80
  selector:
    app: zomato
    #app: train
