ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /nginx(/|$)(.*)
     #- path: /movies(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: nginx
            #name: movies
            port:
              number: 80
              #number: 80
      - path: /httpd(/|$)(.*)
     #- path: /train(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: httpd
            #name: train
            port:
              number: 80
              #number: 80
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: nginx
            #name: movies
            port:
              number: 80
              #number: 80
